--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <i class=" social-icon far fa-envelope"></i>
 <i class=" social-icon fab fa-linkedin"></i>
     <p>© Copyright 2021 tinDog</p>
-    <p>Made with ❤️ by<a href="https://github.com/Ankit-Vishvakarma"> Ankit Vishwakarma.</a></p>
+    <p>Made with ❤️ by Alok Rai</p>
 
 
   </footer>
